add files and update

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 <body>
     <div class="container">
         <label for="number">Digite o tamanho da sua lista de chunks</label>
-        <input type="number" name="number" id="input-number">
-        <button type="button">Criar</button>
+        <input type="number" name="number" id="input-number" min="1">
+        <button type="submit">Criar</button>
         <p id="result"></p>
     </div>
+
+    <script src="js/scripts.js"></script>
 </body>
 </html>
